# ncro

./: .gitignore  Cargo.toml  README.md  config.example.toml  config.example.yaml  flake.nix  go.mod  go.sum
.github/: dependabot.yml
.github/workflows/: nix.yaml  release.yaml  vm-tests.yaml
cmd/ncro/: main.go  root.go
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/db/: Cargo.toml
crates/db/src/: lib.rs
crates/discovery/: Cargo.toml
crates/discovery/src/: lib.rs
crates/health/: Cargo.toml
crates/health/src/: lib.rs
crates/mesh/: Cargo.toml
crates/mesh/src/: lib.rs
crates/metrics/: Cargo.toml
crates/metrics/src/: lib.rs
crates/narinfo/: Cargo.toml
crates/narinfo/src/: lib.rs
crates/router/: Cargo.toml
crates/router/src/: lib.rs
crates/s3/: Cargo.toml
crates/s3/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs
docs/: architecture.md  install.md
internal/cache/: db.go  db_test.go
internal/config/: config.go  config_test.go
internal/discovery/: discovery.go
internal/mesh/: gossip.go  gossip_test.go  mesh.go
internal/metrics/: metrics.go
internal/narinfo/: narinfo.go
internal/prober/: prober.go  prober_test.go
internal/router/: router.go  router_test.go
internal/server/: integration_test.go  server.go  server_test.go
ncro/: Cargo.toml
ncro/src/: cli.rs  main.rs
nix/: module.nix  package.nix  shell.nix
nix/tests/: e2e.nix  p2p.nix  s3.nix
src/: cli.rs  config.rs  discovery.rs  health.rs  main.rs  mesh.rs  narinfo.rs  router.rs  server.rs
