[package]
name = "ncro-config"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
hex.workspace = true
humantime-serde.workspace = true
serde = { workspace = true, features = [ "derive" ] }
serde_yaml.workspace = true
thiserror.workspace = true
url.workspace = true
