[package]
name                  = "ncro-config"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
description.workspace = true
homepage.workspace    = true
repository.workspace  = true

[dependencies]
hex.workspace             = true
humantime-serde.workspace = true
serde                     = { workspace = true, features = [ "derive" ] }
thiserror.workspace       = true
toml.workspace            = true
url.workspace             = true

[lints]
workspace = true
