[package]
name              = "ncro-db"
version.workspace = true
edition.workspace = true
license.workspace = true
publish           = false

[dependencies]
chrono              = { workspace = true, features = [ "serde" ] }
serde               = { workspace = true, features = [ "derive" ] }
sqlx                = { workspace = true, features = [ "runtime-tokio-rustls", "sqlite", "macros", "migrate", "chrono" ] }
thiserror.workspace = true
tokio               = { workspace = true, features = [ "fs" ] }

[lints]
workspace = true
