[package]
name                  = "ncro-discovery"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
description.workspace = true
homepage.workspace    = true
repository.workspace  = true

[dependencies]
anyhow.workspace      = true
mdns-sd.workspace     = true
ncro-config.workspace = true
ncro-health.workspace = true
tokio                 = { workspace = true, features = [ "macros", "rt", "sync", "time" ] }
tracing.workspace     = true

[lints]
workspace = true
