[package]
name                  = "ncro-health"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
description.workspace = true
homepage.workspace    = true
repository.workspace  = true


[dependencies]
ncro-config.workspace = true
reqwest               = { workspace = true, features = [ "rustls" ] }
tokio                 = { workspace = true, features = [ "sync", "time", "rt" ] }

[lints]
workspace = true
