[package]
name                  = "ncro-mesh"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
description.workspace = true
homepage.workspace    = true
repository.workspace  = true

[dependencies]
chrono.workspace    = true
ed25519-dalek       = { workspace = true, features = [ "rand_core" ] }
hex.workspace       = true
ncro-db.workspace   = true
rand.workspace      = true
rmp-serde.workspace = true
serde               = { workspace = true, features = [ "derive" ] }
thiserror.workspace = true
tokio               = { workspace = true, features = [ "fs", "net", "rt", "sync", "time" ] }
tracing.workspace   = true

[lints]
workspace = true
