[package]
name                  = "ncro-router"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
description.workspace = true
homepage.workspace    = true
repository.workspace  = true

[dependencies]
chrono.workspace       = true
dashmap.workspace      = true
futures-util.workspace = true
moka.workspace         = true
ncro-config.workspace  = true
ncro-db.workspace      = true
ncro-health.workspace  = true
ncro-metrics.workspace = true
ncro-narinfo.workspace = true
ncro-s3.workspace      = true
reqwest                = { workspace = true, features = [ "rustls" ] }
thiserror.workspace    = true
tokio                  = { workspace = true, features = [ "macros", "sync", "time", "rt" ] }
tracing.workspace      = true

[lints]
workspace = true
